# account_me

./: .clinerules  .env.template  .gitignore  .pre-commit-config.yaml  .roomodes  .windsurfrules  Dockerfile  Dockerfile.ci  Dockerfile.cloudrun  README.md  SETUP.md  compose.dev.yaml  compose.yaml  docker-compose.yml  pyproject.toml  supervisord.conf
.cline/: build.py
.cline/memory/: activeContext.md  productContext.md  progress.md  projectbrief.md  refactoring_plan.md  refactoring_progress.md  systemPatterns.md  techContext.md
.cline/roomodes/: python-module.md  python-tdd.md  uv-script.md
.cline/rules/: coding.md  python.md  tdd.md
.devcontainer/: devcontainer.json
.github/workflows/: docker.yaml  mypy.yaml  ruff.yaml  test.yml
app/: Dockerfile  pyproject.toml
app/src/: main.py
config/: logging.yaml  settings.yaml
docs/: architecture.md  functions.yaml  gmail_api_setup.md
src/: main.py
src/bigquery/: sync.py
src/config/: __init__.py  base.py  logging_config.py  secrets.py  settings.py
src/exceptions/: base.py  custom_exceptions.py
src/load/: bigquery_loader.py
src/scraper/: browser.py  downloader.py  gmail_client.py  scraper.py
src/scraper/auth/: __init__.py  authenticator.py
src/scraper/base/: __init__.py  selenium_manager.py
src/scraper/files/: __init__.py  csv_processor.py  downloader.py  file_manager.py
src/spreadsheet/: sync.py
terraform/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
terraform/schema/: assets_data.json  household_data.json
test/: conftest.py
test/bigquery/: conftest.py  test_sync.py
test/config/: settings_test.yaml  test_init.py  test_logging_config.py  test_secrets.py  test_settings.py
test/exceptions/: test_exceptions.py
test/scraper/: test_browser.py  test_downloader.py  test_gmail_client.py  test_scraper.py
test/scraper/auth/: __init__.py  test_authenticator.py
test/scraper/base/: __init__.py  test_selenium_manager.py
test/scraper/files/: __init__.py  test_csv_processor.py  test_downloader.py  test_file_manager.py
